--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Adèle Helena Ribeiro / Personal Webpage"
+title                    : "Home"
 title_separator          : "-"
 name                     : &name "Adèle Helena Ribeiro"
 description              : &description "Postdoctoral Research Scientist"
@@ -81,11 +81,11 @@ analytics:
 # Site Author
 author:
   name             : "Adèle Helena Ribeiro"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Postdoctoral Research Scientist"
-  location         : "Columbia University"
-  employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=adele+ribeiro"
+  location         : "New York, NY"
+  employer         : "Causal AI Lab, Columbia University"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=adele+ribeiro"
   googlescholar    : "https://scholar.google.com/citations?user=Py9MTe4AAAAJ&hl=en"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "https://orcid.org/0000-0002-4523-2062"
+  orcid            : #"https://orcid.org/0000-0002-4523-2062"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
@@ -179,9 +179,6 @@ collections:
     output: true
     permalink: /:collection/:path/
   publications:
-    output: true
-    permalink: /:collection/:path/
-  portfolio:
     output: true
     permalink: /:collection/:path/
   talks:
