about and 2017 paper

--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Adèle Helena Ribeiro"
   avatar           : "profile.jpg"
   bio              : "Postdoctoral Research Scientist"
-  location         : "New York, NY"
-  employer         : "Causal AI Lab, Columbia University"
+  location         : "Causal AI Lab, Columbia University"
+  employer         : 
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=adele+ribeiro"
   googlescholar    : "https://scholar.google.com/citations?user=Py9MTe4AAAAJ&hl=en"
   email            :
